--- a/StreamingSiteUI/src/index.html
+++ b/StreamingSiteUI/src/index.html
@@ -12,6 +12,8 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="http://vjs.zencdn.net/4.12/video.js"></script>
+<link href="https://vjs.zencdn.net/5.11/video-js.min.css" rel="stylesheet">
 <link href="assets/css/bootstrap.css" rel='stylesheet' type='text/css' />
 
 
