--- a/StreamingSiteUI/src/index.html
+++ b/StreamingSiteUI/src/index.html
@@ -15,6 +15,7 @@
 <script src="http://vjs.zencdn.net/4.12/video.js"></script>
 <link href="https://vjs.zencdn.net/5.11/video-js.min.css" rel="stylesheet">
 <link href="assets/css/bootstrap.css" rel='stylesheet' type='text/css' />
+<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 
 
