--- a/StreamingSiteUI/src/index.html
+++ b/StreamingSiteUI/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>StreamingSiteUI</title>
+  <title>JaluoTV</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!-- <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script> -->
  <!-- Bootstrap Core CSS -->
 
@@ -15,7 +16,8 @@
 <script src="http://vjs.zencdn.net/4.12/video.js"></script>
 <link href="https://vjs.zencdn.net/5.11/video-js.min.css" rel="stylesheet">
 <link href="assets/css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet" type="text/css">
+
 
 
 
@@ -26,6 +28,7 @@
 <!-- jQuery -->
 <!-- lined-icons -->
 <link rel="stylesheet" href="assets/css/icon-font.css" type='text/css' />
+<link href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css" rel="stylesheet"  type="text/css"/>
 <!-- //lined-icons -->
  <!-- Meters graphs --> 
 </head>
